Compute page fixed

--- a/calculate.html
+++ b/calculate.html
@@ -2,10 +2,18 @@
 <html>
 <head>
     <title>Calculate</title>
+    <style>
+        fieldset#field {
+            background: #FFEEEE;
+            margin: 50px;
+            height: 250px;
+            width: 75%;
+        }
+    </style>
 </head>
 
 <body>
-    <fieldset style="background-color: #FFEEEE">
+    <fieldset id="field">
         <h2>Calculate</h2>
         <form action="/compute">
             <label for="X">X:</label>
